--- a/.github/workflows/pr-creator-image-updater.yml
+++ b/.github/workflows/pr-creator-image-updater.yml
@@ -20,11 +20,10 @@ jobs:
       - name: Create Pull Request
         uses: diillson/auto-pull-request@v1.0.1
         with:
-          source_branch: "image-update"
-          destination_branch: "add-pr-creator-workflow"
-          pr_title: "${{ steps.commit.outputs.message }}"
-          pr_body: "${{ steps.commit.outputs.message }}"
-          pr_label: "auto-pr"
+          source_branch: 'image-update'
+          destination_branch: 'add-pr-creator-workflow'
+          pr_title: '${{ steps.commit.outputs.message }}'
+          pr_body: '${{ steps.commit.outputs.message }}'
+          pr_label: 'auto-pr'
           pr_allow_empty: true
           github_token: ${{ secrets.GH_PAT }}
- 
