--- a/.github/workflows/argocd-image-updater-create-pr.yml
+++ b/.github/workflows/argocd-image-updater-create-pr.yml
@@ -29,7 +29,7 @@ jobs:
 
             **Commit**: ${{ env.GIT_COMMIT_SHORT_SHA }}
           pr_label: 'auto-pr'
-          pr_reviewer: 'Awambeng'
+          #pr_reviewer: 'Awambeng'
           pr_allow_empty: true
           github_token: ${{ secrets.GH_PAT }}
  
