--- a/.github/workflows/argocd-image-updater-create-pr.yml
+++ b/.github/workflows/argocd-image-updater-create-pr.yml
@@ -19,7 +19,7 @@ jobs:
         uses: diillson/auto-pull-request@v1.0.1
         with:
           source_branch: 'image-update'
-          destination_branch: 'test-branch'
+          destination_branch: 'main'
           pr_title: ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}
           pr_body: |
             This pull request updates container images for the application, as detected by Argo CD Image Updater.
@@ -27,8 +27,7 @@ jobs:
             **Changes:**
             ${{ env.GIT_COMMIT_MESSAGE_BODY }}
 
-            **Commit**: ${{ env.GIT_COMMIT_SHORT_SHA }}
           pr_label: 'auto-pr'
-          #pr_reviewer: 'Awambeng'
+          pr_reviewer: 'Awambeng'
           pr_allow_empty: true
           github_token: ${{ secrets.GH_PAT }}
