--- a/.github/workflows/argocd-image-updater-create-pr.yml
+++ b/.github/workflows/argocd-image-updater-create-pr.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           source_branch: 'image-updates'
           destination_branch: 'test-branch'
-          pr_title: ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}
+          pr_title: 'chore: update wallet-vc image'
           pr_body: |
             This pull request updates container images for the application, as detected by Argo CD Image Updater.
 
