--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     # Skip if commit message is from ArgoCD Image Updater or the formatting bot
-    if: |
+    if: >
       !(
         startsWith(github.event.head_commit.message, 'chore: update images for') ||
-        github.actor == 'github-actions[bot]'
+        startsWith(github.event.head_commit.message, 'chore: auto-fix formatting and linting')
       )
 
     permissions:
