--- a/.github/workflows/argocd-image-updater-pr-creator.yml
+++ b/.github/workflows/argocd-image-updater-pr-creator.yml
@@ -11,6 +11,8 @@ env:
 
 jobs:
   auto-fix:
+    # Skip only if the last commit is the auto-fix commit to avoid infinite loop
+    if: "${{ !startsWith(github.event.head_commit.message, 'chore: auto-fix formatting') }}"
     name: Auto-fix Code Formatting
     runs-on: ubuntu-latest
 
